# knowtilus

./: .gitignore  Cargo.toml  README.md  core.py  crawl.py  env.yml  main.py  rustfmt.toml  search.py
foundations/: Cargo.toml
foundations/src/: ai_workshop.rs  common.rs  crawl.rs  entry.rs  lexer.rs  lexer_en.rs  lib.rs  search.rs
python-bindings/: Cargo.toml
samples/biology/: ref
src/: disk_io.rs  lib.rs  travelers.rs  travlers.rs
src/lexers/: en.rs  lexer.rs  mod.rs
test-assets/topics/art/: ref
test-assets/topics/biology/: .gitignore
test-assets/topics/electronics/: ref.md.txt
test-assets/topics/math/: ref.txt
