[package]
name = "knowtilus"
version = "0.1.0"
edition = "2021"

[dependencies]
kd-tree = "0.6.0"
lopdf = "0.34.0"
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }
tokio = "1.42.0"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
dirs = "5.0.1"
anyhow = "1.0.95"
hf-hub = "0.3.2"
tch = "*"

